--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,37 +1,31 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
      
         <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ |async" >
           <li class="nav-item">
-            <a class="nav-link active"  href="#">Matches</a>
+            <a class="nav-link active" routerLink="/members" routerLinkActive="active">Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >Messages</a>
+            <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
           </li>
       
         </ul>
         <!--مثال عن async Pipe-->
-        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcom {{model.userName}}</a>
+        <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.userName |titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a  class="dropdown-item">Edit profile</a>
             <a  class="dropdown-item" (click)="logout()" >Logout</a>
           </div>
         </div>
         <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
-          <input
-          name="UserName"
-          [(ngModel)]="model.userName"
-           class="form-control me-2" type="text" placeholder="UserName" >
-          <input
-          name="password"
-          [(ngModel)]="model.password"
-          class="form-control me-2" type="password" placeholder="Password">
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <input name="UserName" [(ngModel)]="model.userName" class="form-control me-2" type="text" placeholder="UserName" autocomplete="off">
+          <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password" placeholder="Password" autocomplete="off">
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
       </div>
   </nav>
