--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#c73939" type = "pacman" [fullScreen] = "true">
+    <p style="color: white" > Loading... </p>
+</ngx-spinner>
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px;" >
     <router-outlet></router-outlet>
