--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -66,7 +66,7 @@
               
             </tab>
                 <tab heading="Edit Photos">
-                 <p>Photo edit here</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
                 </tab>
                
             </tabset>
