--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,7 +21,8 @@
         </ul>
         <!--مثال عن async Pipe-->
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.userName |titlecase}}</a>
+          <img src="{{user.photoUrl||'./assets/user.png'}}" alt="User photo"> 
+          <a class="dropdown-toggle text-light text-decoration-none ms-2" dropdownToggle>Welcome {{user.userName |titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a  class="dropdown-item" [routerLink]="['/member/edit']" routerLinkActive="router-link-active" >Edit profile</a>
             <a  class="dropdown-item" (click)="logout()" >Logout</a>
